<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="10"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_evaluate"
        android:orderInCategory="20"
        android:title="@string/action_evaluate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="30"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logoff"
        android:orderInCategory="40"
        android:title="@string/action_logoff"
        app:showAsAction="never"/>
</menu>