<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HomeActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_responsible_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:text="Mother A"
        android:textSize="@dimen/title_responsible_name"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Name of the student"
        android:textSize="@dimen/title_student_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@+id/tv_responsible_name" />


    <LinearLayout
        android:id="@+id/layout_first_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_student_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv_evaluations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/description_evaluations"
            android:textStyle="bold"
            android:drawableTop="@drawable/grades"
            android:gravity="center_horizontal"
            android:background="@drawable/background_home_item"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/tv_absences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_absences"
            android:textStyle="bold"
            android:drawableTop="@drawable/absences"
            android:gravity="center_horizontal"
            android:background="@drawable/background_home_item"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_second_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout_first_row"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv_subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_subjects"
            android:textStyle="bold"
            android:drawableTop="@drawable/subjects"
            android:gravity="center_horizontal"
            android:background="@drawable/background_home_item"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/tv_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_notes"
            android:textStyle="bold"
            android:drawableTop="@drawable/notes"
            android:gravity="center_horizontal"
            android:background="@drawable/background_home_item"
            android:layout_marginStart="20dp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id"/>


</RelativeLayout>
