<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="13dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_name"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textColor="@color/black"
        />

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_app_version"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_app_icon"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/tv_app_rights_principal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_rights_principal"
                android:textSize="12sp"
                android:textColor="@color/black"
                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>