<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bruno.udacity.com.studentguardian.ui.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="2dp"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:textAlignment="center"
                app:titleTextAppearance="@style/Theme.Toolbar.Title"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/appBarLayout"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_label_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="@string/type_email"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/layout_email"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_label_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_password"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/type_password"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="Login"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layout_password"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
